clutter-text: emitting ClutterText::delete-text before actual changes on the text

https://bugzilla.gnome.org/show_bug.cgi?id=722220